Fix too small sidebar nav issue on table overflows
This resolves DOC-317:
https://linear.app/buildkite/issue/DOC-317/💄-side-menu-is-too-narrow-only-on-the-webhooks-page

and DOC-308:
https://linear.app/buildkite/issue/DOC-308/fix-and-revert-the-env-vars-business

--- a/app/assets/stylesheets/public/_docs.scss
+++ b/app/assets/stylesheets/public/_docs.scss
@@ -355,6 +355,8 @@ label[for='navicon'] {
 
 @media (min-width: $screen-lg) { //TOC as side column on larger screens
   .Docs__article {
+    display: grid;
+    grid-template-columns: minmax(10px, 1fr) 250px;
     position: relative;
     display: grid;
     gap: 30px;
@@ -373,6 +375,9 @@ label[for='navicon'] {
     top: 0;
 
     .Docs__toc__sticky {
+      background: #fefefe;
+      box-shadow: 2px 2px 4px 5px #eee;
+      padding: 1px 5px 8px 15px;
       position: sticky;
       top: $header-height + 30px;
       width: $sidebar-width;
@@ -649,7 +654,7 @@ body.beta {
     .Docs__heading {
       display: inline;
       position: relative;
-  
+
       &:after {
         @include pill;
         @include pill-style(beta);
